fix page header vertical spacing

--- a/source/stylesheets/style.css
+++ b/source/stylesheets/style.css
@@ -269,8 +269,7 @@ li.collapsibleListClosed{
 }
 
 .page-header {
-  padding-bottom: 12px;
-  margin: 0 0;
+  margin: 10px 0;
   border-bottom: 1px solid #ddd;
 }
 
